--- a/kadin-yazilimci/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/kadin-yazilimci/index.html
@@ -649,61 +649,75 @@
                         <h5>Platinum Sponsorlarımız</h5>
                     </div>
 
+                 
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
+                                    <p>Etkinlik Mekan Sponsorumuz</p>
+                                    <p>Odunpazarı Belediyesi</p>
+                                    <a target="_blank" href="https://www.odunpazari.bel.tr/">
+                                        <img src="images/sponsors/odunpazari-belediyesi.jpg" alt="sponsors-logo" >
+                                    </a>
+                                </div>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
                                     <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
                                     <a href="#">
                                         <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
                                     </a>
                                 </div>
                             </li>
+
+
+
 
                             <!--<li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+        <div class="image-block text-center">
+            <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+            <a href="#">
+                <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+            </a>
+        </div>
+    </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+    <li class="list-inline-item">
+        <div class="image-block text-center">
+            <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+            <a href="#">
+                <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+            </a>
+        </div>
+    </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+    <li class="list-inline-item">
+        <div class="image-block text-center">
+            <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+            <a href="#">
+                <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+            </a>
+        </div>
+    </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+    <li class="list-inline-item">
+        <div class="image-block text-center">
+            <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+            <a href="#">
+                <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+            </a>
+        </div>
+    </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>-->
+    <li class="list-inline-item">
+        <div class="image-block text-center">
+            <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+            <a href="#">
+                <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+            </a>
+        </div>
+    </li>-->
 
 
                         </ul>
@@ -717,58 +731,58 @@
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
                             <!--<li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>-->
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>-->
 
 
                         </ul>
@@ -782,58 +796,58 @@
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
                             <!--<li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>
 
-                            <li class="list-inline-item">
-                                <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
-                                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
-                                    </a>
-                                </div>
-                            </li>-->
+            <li class="list-inline-item">
+                <div class="image-block text-center">
+                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                    <a href="#">
+                        <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
+                    </a>
+                </div>
+            </li>-->
 
 
                         </ul>
