--- a/kadin-yazilimci/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/kadin-yazilimci/organisators.html
@@ -115,6 +115,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mx-auto text-center">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/speakers/ezgi-erdem-aytac.jpg" alt="Organizatör Ezdi ERDEM AYTAÇ Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://twitter.com/pmezgi"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ezgierdem/"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Ezgi Erdem Aytaç</a></h5>
+                            <p><b>Founder of Gingain & uxreport.io</b></p><br />
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
@@ -133,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-               
+
 
             </div>
 
@@ -173,7 +192,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/fatma-yaren-ozcelik.jpg" alt="Fatma Yaren Özçelik Fotoğraf" class="img-fluid">
+                            <img src="images/speakers/fatma-yaren-ozcelik.png" alt="Fatma Yaren Özçelik Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -187,7 +206,7 @@
                                 <b>
                                     Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi
                                 </b>
-                            </p>
+                            </p><br />
                         </div>
                     </div>
                 </div>
@@ -222,7 +241,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/eren-bostan.jpg" alt="Eren Bostan Fotoğraf" class="img-fluid">
+                            <img src="images/speakers/eren-bostan.png" alt="Eren Bostan Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -302,7 +321,7 @@
                         </div>
                         <div class="content text-center">
                             <h5><a>Hakan Yavaş</a></h5>
-                            <p><b>Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi</b></p>
+                            <p><b>Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi</b></p><br />
                         </div>
                     </div>
                 </div>
@@ -322,7 +341,7 @@
                         </div>
                         <div class="content text-center">
                             <h5><a>Alperen Güneş</a></h5>
-                            <p><b>Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi</b></p>
+                            <p><b>Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi</b></p><br />
                         </div>
                     </div>
                 </div>
@@ -342,6 +361,37 @@
             </div>
             <div class="row">
 
+            </div>
+
+
+            <!-- Destekleyen Topluluklar -->
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-title">
+                        <h3><span class="alternate">Destekleyen</span> Topluluklar</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/product-tank.png" alt="ProductTank Istanbul Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.meetup.com/producttank-istanbul/"><i class="fa fa-meetup"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>ProductTank Istanbul</a></h5>
+                        </div>
+                    </div>
+                </div>
 
 
 
@@ -350,8 +400,7 @@
 
 
             </div>
-        </div>
-    </section>
+</section>
 
     <!--====  End of Speakers  ====-->
     <!--==============================================
