--- a/kadin-yazilimci/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/kadin-yazilimci/index.html
@@ -142,7 +142,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title white">
-                        <h3>Etkinlik Koordinatörümüz</h3>
+                        <h3>Koordinatör ve Sunucu</h3>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="content text-center">
                             <h5><a>Ezgi Erdem Aytaç</a></h5>
-                            <p><b>Etkinlik Koordinatörü</b></p>
+                            <p><b>Founder of Gingain & uxreport.io</b></p>
                         </div>
                     </div>
                 </div>
@@ -665,7 +665,7 @@
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
-                                    <a href="#">
+                                    <a target="_blank" href="https://www.letocityhotel.com/">
                                         <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
                                     </a>
                                 </div>
