--- a/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/organisators.html
@@ -185,9 +185,9 @@
                             <p>
                                 <b>
                                     Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi,
-                                    GSDC Lead
+                                    GDSC Lead
                                 </b>
-                            </p><br />
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                                 <b>
                                     Eskişehir Osmangazi Üniversitesi, Bilgisayar Mühendisliği Öğrencisi
                                 </b>
-                            </p><br /><br />
+                            </p><br />
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                                     Eskişehir Osmangazi Üniversitesi, Matematik ve Bilgisayar Bilimleri Bölümü Öğrencisi,
                                     GDSC Core Team
                                 </b>
-                            </p><br /><br />
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -449,7 +449,7 @@
                         </div>
                         <div class="content text-center">
                             <h5><a>Cansu Çakır Telli</a></h5>
-                            <p><b>UI/UX Designer</b></p><br />
+                            <p><b>UI/UX Designer</b></p>
                         </div>
                     </div>
                 </div>
@@ -492,45 +492,7 @@
             </div>
             <div class="row">
 
-
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <!-- Speaker 1 -->
-                    <div class="speaker-item">
-                        <div class="image">
-                            <img src="images/sponsors/tjc.png" alt="Türkiye Java Community Fotoğraf" class="img-fluid">
-                            <div class="primary-overlay"></div>
-                            <div class="socials">
-                                <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://turkiyejava.community/"><i class="fa fa-laptop"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="content text-center">
-                            <h5><a>Türkiye Java Community</a></h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <!-- Speaker 1 -->
-                    <div class="speaker-item">
-                        <div class="image">
-                            <img src="images/sponsors/odunpazari-kent-konseyi.jpg" alt="Odunpazarı Kent Konseyi Fotoğraf" class="img-fluid">
-                            <div class="primary-overlay"></div>
-                            <div class="socials">
-                                <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://odunpazari.bel.tr/projeler/katilimci-belediyecilik/odunpazari-kent-konseyi"><i class="fa fa-laptop"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="content text-center">
-                            <h5><a>Odunpazarı Kent Konseyi</a></h5>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
@@ -549,15 +511,13 @@
                 </div>
 
 
-
-
-                <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
                             <img src="images/sponsors/product-club.png" alt="Product Club Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
-                          
+
                         </div>
                         <div class="content text-center">
                             <h5><a>Product Club</a></h5>
@@ -565,6 +525,79 @@
                     </div>
                 </div>
 
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/mbk.png" alt="ProductTank Istanbul Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.meetup.com/producttank-istanbul/"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Malzeme Bilimleri Kulübü</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/tjc.png" alt="Türkiye Java Community Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://turkiyejava.community/"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Türkiye Java Community</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/odunpazari-kent-konseyi.jpg" alt="Odunpazarı Kent Konseyi Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://odunpazari.bel.tr/projeler/katilimci-belediyecilik/odunpazari-kent-konseyi"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Odunpazarı Kent Konseyi</a></h5>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/mpgk.png" alt="Mühendislik Projeleri Geliştirme Kulübü Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://turkiyejava.community/"><i class="fa fa-laptop"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Mühendislik Projeleri Geliştirme Kulübü</a></h5>
+                        </div>
+                    </div>
+                </div>
 
 
 
