--- a/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/index.html
@@ -343,8 +343,8 @@
                         <div class="content text-center">
                             <h5><a>Kübra Odabaş Taşlı</a></h5>
                             <p>
-                                <b>Group Head of Products & Channels @Bankpozitif</b>
-                            </p><br />
+                                <b>Group Head of Products & Channels</b>
+                            </p><br /><br />
                         </div>
                     </div>
                 </div>
@@ -646,7 +646,7 @@
                 <div class="col-12">
                     <!-- Title -->
                     <div class="sponsor-title text-center">
-                        <h5>Platinum Sponsorlarımız</h5>
+                        <h5>Platinum Sponsorlar</h5>
                     </div>
 
 
@@ -663,7 +663,7 @@
 
                     <!-- Title -->
                     <div class="sponsor-title text-center">
-                        <h5>Gold Sponsorlarımız</h5>
+                        <h5>Gold Sponsorlar</h5>
                     </div>
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
@@ -673,7 +673,7 @@
 
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
-                                    <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
+                                    <p>Konaklama Sponsoru</p>
                                     <p><b>Leto City Hotel</b></p>
                                     <a target="_blank" href="https://www.letocityhotel.com/">
                                         <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
@@ -687,14 +687,14 @@
                     </div>
 
                     <div class="sponsor-title text-center">
-                        <h5>Gümüş Sponsorlarımız</h5>
+                        <h5>Gümüş Sponsorlar</h5>
                     </div>
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
 
                             <li class="list-inline-item">
                                 <div class="image-block text-center">
-                                    <p>Etkinlik Mekan Sponsorumuz</p>
+                                    <p>Etkinlik Mekan Sponsoru</p>
                                     <p><b>Odunpazarı Belediyesi</b></p><br />
                                     <a target="_blank" href="https://www.odunpazari.bel.tr/">
                                         <img src="images/sponsors/odunpazari-belediyesi.jpg" alt="sponsors-logo">
@@ -708,10 +708,39 @@
 
                     <!-- Title -->
                     <div class="sponsor-title text-center">
-                        <h5>Destek Sponsorlarımız</h5>
+                        <h5>Destek Sponsorları</h5>
                     </div>
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Charlie's Friends</b></p><br />
+                                    <a target="_blank" href="https://www.instagram.com/charliesfriends26/">
+                                        <img src="images/sponsors/charlies.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Fellas Burger & Friedchicken</b></p><br />
+                                    <a target="_blank" href="https://www.instagram.com/fellas_burger/">
+                                        <img src="images/sponsors/fellas.png" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
+
+                            <li class="list-inline-item">
+                                <div class="image-block text-center">
+                                    <p><b>Sib Pizza</b></p><br />
+                                    <a href="#">
+                                        <img src="images/sponsors/sib-pizza.jpg" alt="sponsors-logo">
+                                    </a>
+                                </div>
+                            </li>
+
+
+
                         </ul>
 
                     </div>
