--- a/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/organisators.html
@@ -158,15 +158,17 @@
 
 
             </div>
-
+            <br /><br />
             <div class="row">
                 <div class="col-12">
                     <!-- Section Title -->
                     <div class="section-title">
-                        <h3><span class="alternate">GDSC </span>Organizasyon Ekibi</h3>
+                        <img src="images/sponsors/gdsc.png" alt="GDSC Logo" class="img-fluid"><br /><br />
+                        <h3><span class="alternate">GDSC</span> Organizasyon Ekibi</h3>
                     </div>
                 </div>
-            </div>
+            </div><br />
+
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <!-- Speaker 1 -->
@@ -534,7 +536,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://www.meetup.com/producttank-istanbul/"><i class="fa fa-laptop"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://metalurj.ogu.edu.tr/Sayfa/Index/48/malzeme-bilimleri-kulubu"><i class="fa fa-laptop"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -580,6 +582,24 @@
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/sponsors/padme.jpg" alt="Padme Atölye Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.instagram.com/padmeatolye/"><i class="fa fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Padme Atölye</a></h5>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
@@ -589,7 +609,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="https://turkiyejava.community/"><i class="fa fa-laptop"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://mmf.ogu.edu.tr/Sayfa/Index/223/muhendislik-projeleri-gelistirme-kulubu"><i class="fa fa-laptop"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -604,7 +624,7 @@
 
 
             </div>
-    </section>
+</section>
 
     <!--====  End of Speakers  ====-->
     <!--==============================================
